--- a/Aspire/AppHost/AppHost.csproj
+++ b/Aspire/AppHost/AppHost.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.4.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Services\Catalog\Catalog.csproj" />
+  </ItemGroup>
+
 </Project>
