--- a/Aspire/AppHost/AppHost.csproj
+++ b/Aspire/AppHost/AppHost.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../../Frontend/WebApp/WebApp.csproj" />
     <ProjectReference Include="../../Services/Basket/Basket.csproj" />
     <ProjectReference Include="../../Services/Catalog/Catalog.csproj" />
   </ItemGroup>
