--- a/Services/Catalog/Catalog.csproj
+++ b/Services/Catalog/Catalog.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="CommunityToolkit.Aspire.OllamaSharp" Version="9.7.2" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.VectorData.Abstractions" Version="9.7.0" />
+    <PackageReference Include="Microsoft.SemanticKernel.Connectors.InMemory" Version="1.64.0-preview" />
   </ItemGroup>
 
   <ItemGroup>
